gpt3-website/src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

/* html {
  Sets 1rem to 10px
  font-size: 62.5%;
} */

body {
  background-color: var(--color-bg);
}

a {
  color: unset;
  text-decoration: none;
}

.gradient__bg {
  /* ff 3.6+ */
  background: -moz-radial-gradient(circle at 3% 25%, #002853 0%, #040c18 100%);

  /* safari 5.1+,chrome 10+ */
  background: -webkit-radial-gradient(
    circle at 3% 25%,
    #002853 0%,
    #040c18 100%
  );

  /* opera 11.10+ */
  background: -o-radial-gradient(circle at 3% 25%, #002853 0%, #040c18 100%);

  /* ie 10+ */
  background: -ms-radial-gradient(circle at 3% 25%, #002853 0%, #040c18 100%);

  /* global 92%+ browsers support */
  background: radial-gradient(circle at 3% 25%, #002853 0%, #040c18 100%);
}

.gradient__text {
  background: var(--gradient-text);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.section__padding {
  padding: 4rem 6rem;
}

@media screen and (max-width: 490px) {
  .section__padding {
    padding: 0 1rem;
  }
}

.section__margin {
  margin: 4rem 6rem;
}

.scale-up-center {
  -webkit-animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1)
    both;
  animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
}

@-webkit-keyframes scale-up-center {
  0% {
    -webkit-transform: scale(0.5);
    transform: scale(0.5);
  }
  100% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
}

@keyframes scale-up-center {
  0% {
    -webkit-transform: scale(0.5);
    transform: scale(0.5);
  }
  100% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
}

@media screen and (max-width: var(--tablet)) {
  .section__padding {
    padding: 4rem;
  }

  .section__margin {
    margin: 4rem;
  }
}

@media screen and (max-width: var(--mobile)) {
  .section__padding {
    padding: 4rem 2rem;
  }

  .section__margin {
    margin: 4rem 2rem;
  }
}

